# ori-skills-hub

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  LICENSE  PRINCIPLES.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: implementation.yml
.github/workflows/: ci.yml
hub/: __init__.py  main.py
hub/core/: __init__.py  config.py  errors.py  models.py  review.py  validation.py
hub/integrations/: scan.py
hub/security/: signing.py
hub/storage/: local.py
hub/web/: main.py
scripts/: check_dependency_alignment.py  check_license_headers.py  check_workflows.py
tests/: test_config.py  test_review.py  test_signing.py  test_storage.py
